--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Juan de Juanes Blog
 email: juanes4498@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Manufacturing Technology Issues
-twitter_username: _wikifab08_
+twitter_username: wikifab08
 github_username: Juanes4498
 minimal_mistakes_skin: dark
 search: true
@@ -71,7 +71,7 @@ author:
       url: "mailto:juanes4498@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/_wikifab08_”
+      url: "https://twitter.com/wikifab08”
 
 footer:
   links:
@@ -83,7 +83,7 @@ footer:
       url: "mailto:juanes4498@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/_wikifab08_”
+      url: "https://twitter.com/wikifab08”
 
 defaults:
   # _posts
